Added ability to "correct" certain days.

--- a/toggl_ot_calc.toml
+++ b/toggl_ot_calc.toml
@@ -1,3 +1,9 @@
 [toggl]
 api_token = ""
 workspace_id = 1
+
+[specialDays]
+2021-03-31 = -3.5
+2021-12-24 = -3.5
+2021-12-31 = -3.5
+2022-04-13 = -3.5
